--- a/Surfboard/surfboard.conf
+++ b/Surfboard/surfboard.conf
@@ -1,12 +1,8 @@
 [General]
-internet-test-url = http://www.aliyun.com
+dns-server = system, 8.8.8.8, 8.8.4.4, 9.9.9.9:9953
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, www.baidu.com //444
 proxy-test-url = http://www.gstatic.com/generate_204
-loglevel = notify
-bypass-system = true
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,e.crashlytics.com,captive.apple.com,::ffff:0:0:0:0/1,::ffff:128:0:0:0/1
-
-bypass-tun = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-dns-server = 119.29.29.29,223.5.5.5,114.114.114.114,system
+always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com
 [Proxy]
 DIRECT = direct
 新加坡-智能 = vmess, gtm.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=gtm.mj-cn.cyou, ws-headers=Host:gtm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
@@ -45,6 +41,5 @@ RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/TikTok.li
 RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/Telegram.list,Telegram
 RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/Google.list,Google
 RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/China.list,DIRECT
-IP-CIDR,119.28.28.28/32,DIRECT,no-resolve
 GEOIP,CN,DIRECT
 FINAL,黑白名单
