--- a/Surfboard/surfboard.conf
+++ b/Surfboard/surfboard.conf
@@ -33,6 +33,7 @@ DIRECT = direct
 PROXY = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
 TikTok = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
 Telegram = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
+YouTube = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
 Google = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
 黑白名单 = select, PROXY, DIRECT
 [Rule]
