--- a/Surfboard/surfboard.conf
+++ b/Surfboard/surfboard.conf
@@ -1,40 +1,43 @@
 [General]
-dns-server = system, 8.8.8.8, 8.8.4.4, 9.9.9.9:9953
-skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, www.baidu.com //444
+internet-test-url = http://www.aliyun.com
 proxy-test-url = http://www.gstatic.com/generate_204
-always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com
+loglevel = notify
+bypass-system = true
+skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,e.crashlytics.com,captive.apple.com,::ffff:0:0:0:0/1,::ffff:128:0:0:0/1
+bypass-tun = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
+dns-server = 119.29.29.29,223.5.5.5,114.114.114.114,system
 [Proxy]
 DIRECT = direct
-新加坡-智能 = vmess, gtm.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=gtm.mj-cn.cyou, ws-headers=Host:gtm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-新加坡-优化3 = vmess, ct.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-新加坡-优化2 = vmess, cm.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-新加坡-优化 = vmess, cu.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港-优化3 = vmess, ct.mj-cn.cyou, 16633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港-优化 = vmess, cu.mj-cn.cyou, 16633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港-隧道3 = vmess, ct.mj-cn.cyou, 26633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港-隧道2 = vmess, cm.mj-cn.cyou, 26633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港-隧道 = vmess, cu.mj-cn.cyou, 26633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港环电-隧道3 = vmess, ct.mj-cn.cyou, 26622, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港环电-隧道2 = vmess, cm.mj-cn.cyou, 26622, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港环电-隧道1 = vmess, cu.mj-cn.cyou, 26622, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港HKT2-优化3 = vmess, ct.mj-cn.cyou, 16631, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港HGC-优化3 = vmess, ct.mj-cn.cyou, 16621, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港HGC-优化2 = vmess, cm.mj-cn.cyou, 16621, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-香港HGC-优化 = vmess, cu.mj-cn.cyou, 16621, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-台湾-智能 = vmess, gtm.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=gtm.mj-cn.cyou, ws-headers=Host:gtm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-台湾-优化3 = vmess, ct.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-台湾-优化2 = vmess, cm.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-台湾-优化 = vmess, cu.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-日本-智能 = vmess, gtm.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=gtm.mj-cn.cyou, ws-headers=Host:gtm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-日本-优化3 = vmess, ct.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-日本-优化2 = vmess, cm.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
-日本-优化 = vmess, cu.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇸🇬新加坡-智能 = vmess, gtm.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=gtm.mj-cn.cyou, ws-headers=Host:gtm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇸🇬新加坡-优化3 = vmess, ct.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇸🇬新加坡-优化2 = vmess, cm.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇸🇬新加坡-优化 = vmess, cu.mj-cn.cyou, 16618, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港-优化3 = vmess, ct.mj-cn.cyou, 16633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港-优化 = vmess, cu.mj-cn.cyou, 16633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港-隧道3 = vmess, ct.mj-cn.cyou, 26633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港-隧道2 = vmess, cm.mj-cn.cyou, 26633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港-隧道 = vmess, cu.mj-cn.cyou, 26633, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港环电-隧道3 = vmess, ct.mj-cn.cyou, 26622, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港环电-隧道2 = vmess, cm.mj-cn.cyou, 26622, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港环电-隧道1 = vmess, cu.mj-cn.cyou, 26622, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港HKT2-优化3 = vmess, ct.mj-cn.cyou, 16631, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港HGC-优化3 = vmess, ct.mj-cn.cyou, 16621, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港HGC-优化2 = vmess, cm.mj-cn.cyou, 16621, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇭🇰香港HGC-优化 = vmess, cu.mj-cn.cyou, 16621, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇹🇼台湾-智能 = vmess, gtm.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=gtm.mj-cn.cyou, ws-headers=Host:gtm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇹🇼台湾-优化3 = vmess, ct.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇹🇼台湾-优化2 = vmess, cm.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇹🇼台湾-优化 = vmess, cu.mj-cn.cyou, 16616, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇯🇵日本-智能 = vmess, gtm.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=gtm.mj-cn.cyou, ws-headers=Host:gtm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇯🇵日本-优化3 = vmess, ct.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=ct.mj-cn.cyou, ws-headers=Host:ct.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇯🇵日本-优化2 = vmess, cm.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cm.mj-cn.cyou, ws-headers=Host:cm.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
+🇯🇵日本-优化 = vmess, cu.mj-cn.cyou, 16617, username=b34bbc16-67ed-43fe-b52c-b94006cb2a4e, tls=false, ws=true, ws-path=/, sni=cu.mj-cn.cyou, ws-headers=Host:cu.mj-cn.cyou, skip-cert-verify=true, tfo=false, udp-relay=true
 [Proxy Group]
-PROXY = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
-TikTok = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
-Telegram = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
-YouTube = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
-Google = select, 新加坡-智能, 新加坡-优化3, 新加坡-优化2 ,新加坡-优化, 香港-优化, 香港-优化3, 香港-隧道3, 香港-隧道2, 香港-隧道, 香港环电-隧道3, 香港环电-隧道2, 香港环电-隧道1, 香港HKT2-优化3, 香港HGC-优化3, 香港HGC-优化2, 香港HGC-优化, 台湾-智能, 台湾-优化3, 台湾-优化2, 台湾-优化, 日本-智能, 日本-优化3, 日本-优化2, 日本-优化
+PROXY = select, 🇸🇬新加坡-智能, 🇸🇬新加坡-优化3, 🇸🇬新加坡-优化2, 🇸🇬新加坡-优化, 🇭🇰香港-优化, 🇭🇰香港-优化3, 🇭🇰香港-隧道3, 🇭🇰香港-隧道2, 🇭🇰香港-隧道, 🇭🇰香港环电-隧道3, 🇭🇰香港环电-隧道2, 🇭🇰香港环电-隧道1, 🇭🇰香港HKT2-优化3, 🇭🇰香港HGC-优化3, 🇭🇰香港HGC-优化2, 🇭🇰香港HGC-优化, 🇹🇼台湾-智能, 🇹🇼台湾-优化3, 🇹🇼台湾-优化2, 🇹🇼台湾-优化, 🇯🇵日本-智能, 🇯🇵日本-优化3, 🇯🇵日本-优化2, 🇯🇵日本-优化
+TikTok = select, 🇸🇬新加坡-智能, 🇸🇬新加坡-优化3, 🇸🇬新加坡-优化2, 🇸🇬新加坡-优化, 🇭🇰香港-优化, 🇭🇰香港-优化3, 🇭🇰香港-隧道3, 🇭🇰香港-隧道2, 🇭🇰香港-隧道, 🇭🇰香港环电-隧道3, 🇭🇰香港环电-隧道2, 🇭🇰香港环电-隧道1, 🇭🇰香港HKT2-优化3, 🇭🇰香港HGC-优化3, 🇭🇰香港HGC-优化2, 🇭🇰香港HGC-优化, 🇹🇼台湾-智能, 🇹🇼台湾-优化3, 🇹🇼台湾-优化2, 🇹🇼台湾-优化, 🇯🇵日本-智能, 🇯🇵日本-优化3, 🇯🇵日本-优化2, 🇯🇵日本-优化
+Telegram = select, 🇸🇬新加坡-智能, 🇸🇬新加坡-优化3, 🇸🇬新加坡-优化2, 🇸🇬新加坡-优化, 🇭🇰香港-优化, 🇭🇰香港-优化3, 🇭🇰香港-隧道3, 🇭🇰香港-隧道2, 🇭🇰香港-隧道, 🇭🇰香港环电-隧道3, 🇭🇰香港环电-隧道2, 🇭🇰香港环电-隧道1, 🇭🇰香港HKT2-优化3, 🇭🇰香港HGC-优化3, 🇭🇰香港HGC-优化2, 🇭🇰香港HGC-优化, 🇹🇼台湾-智能, 🇹🇼台湾-优化3, 🇹🇼台湾-优化2, 🇹🇼台湾-优化, 🇯🇵日本-智能, 🇯🇵日本-优化3, 🇯🇵日本-优化2, 🇯🇵日本-优化
+YouTube = select, 🇸🇬新加坡-智能, 🇸🇬新加坡-优化3, 🇸🇬新加坡-优化2, 🇸🇬新加坡-优化, 🇭🇰香港-优化, 🇭🇰香港-优化3, 🇭🇰香港-隧道3, 🇭🇰香港-隧道2, 🇭🇰香港-隧道, 🇭🇰香港环电-隧道3, 🇭🇰香港环电-隧道2, 🇭🇰香港环电-隧道1, 🇭🇰香港HKT2-优化3, 🇭🇰香港HGC-优化3, 🇭🇰香港HGC-优化2, 🇭🇰香港HGC-优化, 🇹🇼台湾-智能, 🇹🇼台湾-优化3, 🇹🇼台湾-优化2, 🇹🇼台湾-优化, 🇯🇵日本-智能, 🇯🇵日本-优化3, 🇯🇵日本-优化2, 🇯🇵日本-优化
+Google = select, 🇸🇬新加坡-智能, 🇸🇬新加坡-优化3, 🇸🇬新加坡-优化2, 🇸🇬新加坡-优化, 🇭🇰香港-优化, 🇭🇰香港-优化3, 🇭🇰香港-隧道3, 🇭🇰香港-隧道2, 🇭🇰香港-隧道, 🇭🇰香港环电-隧道3, 🇭🇰香港环电-隧道2, 🇭🇰香港环电-隧道1, 🇭🇰香港HKT2-优化3, 🇭🇰香港HGC-优化3, 🇭🇰香港HGC-优化2, 🇭🇰香港HGC-优化, 🇹🇼台湾-智能, 🇹🇼台湾-优化3, 🇹🇼台湾-优化2, 🇹🇼台湾-优化, 🇯🇵日本-智能, 🇯🇵日本-优化3, 🇯🇵日本-优化2, 🇯🇵日本-优化
 黑白名单 = select, PROXY, DIRECT
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/YouTube.list,YouTube
