--- a/Surfboard/Surge.conf
+++ b/Surfboard/Surge.conf
@@ -10,18 +10,17 @@ dns-server = 119.29.29.29,223.5.5.5,114.114.114.114,system
 [Proxy]
 DIRECT = direct
 
-
 [Proxy Group]
-PROXY = select, 
-TikTok = select, 
-Telegram = select, 
-YouTube = select, 
-Google = select, 
-🇭🇰香港HK = url-test, 
-🇸🇬新加坡SG = url-test, policy-path=
-🇹🇼台湾TW = url-test, policy-path=
-🇯🇵日本JP = url-test, policy-path=
-🇺🇸美国US = url-test, policy-path=
+PROXY = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
+TikTok = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
+Telegram = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
+YouTube = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
+Google = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
+🇭🇰香港HK = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/mifeng, policy-regex-filter=US-.*
+🇸🇬新加坡SG = select, policy-path=https://stc-spadesdns.com/link/o3vSXnFXTcjI8mCR?sub=1, policy-regex-filter=TW-.*
+🇹🇼台湾TW = select, policy-path=https://stc-spadesdns.com/link/o3vSXnFXTcjI8mCR?sub=3&extend=1, policy-regex-filter=SG-.*
+🇯🇵日本JP = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/proxy/Japan, policy-regex-filter=JP-.*
+🇺🇸美国US = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/proxy/HongKong, policy-regex-filter=HK-.*
 黑白名单 = select, PROXY, DIRECT
 
 [Rule]
