--- a/Surfboard/Surge.conf
+++ b/Surfboard/Surge.conf
@@ -1,11 +1,8 @@
 [General]
-internet-test-url = http://www.aliyun.com
+dns-server = system, 8.8.8.8, 8.8.4.4, 9.9.9.9:9953
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, 100.64.0.0/10, localhost, *.local, www.baidu.com //444
 proxy-test-url = http://www.gstatic.com/generate_204
-loglevel = notify
-bypass-system = true
-skip-proxy = 127.0.0.1,192.168.0.0/16,10.0.0.0/8,172.16.0.0/12,100.64.0.0/10,localhost,*.local,e.crashlytics.com,captive.apple.com,::ffff:0:0:0:0/1,::ffff:128:0:0:0/1
-bypass-tun = 192.168.0.0/16,10.0.0.0/8,172.16.0.0/12
-dns-server = 119.29.29.29,223.5.5.5,114.114.114.114,system
+always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com
 
 [Proxy]
 DIRECT = direct
