--- a/Surfboard/Surge.conf
+++ b/Surfboard/Surge.conf
@@ -8,16 +8,16 @@ always-real-ip = *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.co
 DIRECT = direct
 
 [Proxy Group]
-PROXY = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
-TikTok = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
-Telegram = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
-YouTube = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
-Google = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇬新加坡SG, DIRECT
-🇭🇰香港HK = url-test, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt
-🇸🇬新加坡SG = url-test, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt
-🇹🇼台湾TW = url-test, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt
-🇯🇵日本JP = url-test, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt
-🇺🇸美国US = url-test, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt
+PROXY = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇸🇬新加坡SG
+TikTok = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇸🇬新加坡SG
+Telegram = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇸🇬新加坡SG
+YouTube = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇸🇬新加坡SG
+Google = select, 🇭🇰香港HK, 🇹🇼台湾TW, 🇯🇵日本JP, 🇺🇸美国US, 🇸🇬新加坡SG
+🇭🇰香港HK = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt, policy-regex-filter=香港-.*
+🇸🇬新加坡SG = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt, policy-regex-filter=新加坡-.*
+🇹🇼台湾TW = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt, policy-regex-filter=台湾-.*
+🇯🇵日本JP = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt, policy-regex-filter=日本-.*
+🇺🇸美国US = select, policy-path=https://raw.githubusercontent.com/loonvip/2028/main/Surfboard/aooong.txt, policy-regex-filter=美国-.*
 黑白名单 = select, PROXY, DIRECT
 
 [Rule]
