--- a/Clash/clash.yaml
+++ b/Clash/clash.yaml
@@ -9,6 +9,10 @@ hosts:
   mtalk.google.com: 108.177.125.188
   dl.google.com: 180.163.151.161
   dl.l.google.com: 180.163.151.161
+
+profile:
+  store-selected: false
+
 dns:
   enable: false
   listen: 0.0.0.0:53
@@ -30,76 +34,90 @@ dns:
     - "*.battlenet.com"
     - "*.blzstatic.cn"
     - "*.battle.net"
+
   nameserver:
     - 119.29.29.29
+  fallback-filter:
+    geoip: true
+    ipcidr: null
+
 proxies: null
+
 proxy-providers:
+
+  Proxy:
+    type: http
+    url: 【订阅】
+    interval: 3600
+    path: ./Proxy/List.yaml
+    health-check:
+      enable: true
+      interval: 600
+      url: http://www.gstatic.com/generate_204
+
   HK:
-    type: http
-    url: https://dove.589669.xyz/all2clash?&sub=https%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fmifeng%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FHongKong%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FJapan%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D1%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D3%26extend%3D1&filter=(%3F%3D.*(%E6%B8%AF%7CHK%7C(%3Fi)Hong))&emoji=-1&sort=0
-    interval: 3600
-    path: ./Proxy/HKList.yaml
+    filter: 港|HK|(?i)Hong
+    type: file
+    path: ./Proxy/List.yaml
     health-check:
       enable: true
       interval: 600
       url: http://www.gstatic.com/generate_204
+
   TW:
-    type: http
-    url: https://dove.589669.xyz/all2clash?&sub=https%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fmifeng%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FHongKong%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FJapan%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D1%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D3%26extend%3D1&filter=(%3F%3D.*(%E5%8F%B0%7CTW%7C(%3Fi)Taiwan))&emoji=-1&sort=0
-    interval: 3600
-    path: ./Proxy/TWList.yaml
+    filter: 台|TW|(?i)Taiwan
+    type: file
+    path: ./Proxy/List.yaml
     health-check:
       enable: true
       interval: 600
       url: http://www.gstatic.com/generate_204
+
   SG:
-    type: http
-    url: https://dove.589669.xyz/all2clash?&sub=https%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fmifeng%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FHongKong%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FJapan%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D1%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D3%26extend%3D1&filter=(%3F%3D.*(%E6%96%B0%7C%E7%8B%AE%7C%E7%8D%85%7CSG%7C(%3Fi)Singapore))&emoji=-1&sort=0
-    interval: 3600
-    path: ./Proxy/SGList.yaml
+    filter: 新|狮|獅|SG|(?i)Singapore
+    type: file
+    path: ./Proxy/List.yaml
     health-check:
       enable: true
       interval: 600
       url: http://www.gstatic.com/generate_204
+
   JP:
-    type: http
-    url: https://dove.589669.xyz/all2clash?&sub=https%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fmifeng%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FHongKong%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FJapan%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D1%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D3%26extend%3D1&filter=(%3F%3D.*(%E6%97%A5%7CJP%7C(%3Fi)Japan))&emoji=-1&sort=0
-    interval: 3600
-    path: ./Proxy/JPList.yaml
+    filter: 日|JP|(?i)Japan
+    type: file
+    path: ./Proxy/List.yaml
     health-check:
       enable: true
       interval: 600
       url: http://www.gstatic.com/generate_204
+
   US:
-    type: http
-    url: https://dove.589669.xyz/all2clash?&sub=https%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fmifeng%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FHongKong%2Bhttps%3A%2F%2Fraw.githubusercontent.com%2Floonvip%2F2028%2Fmain%2Fproxy%2FJapan%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D1%2Bhttps%3A%2F%2Fstc-spadesdns.com%2Flink%2Fo3vSXnFXTcjI8mCR%3Fsub%3D3%26extend%3D1&filter=(%3F%3D.*(%E7%BE%8E%7CUS%7C(%3Fi)States%7CAmerican))&emoji=-1&sort=0
-    interval: 3600
-    path: ./Proxy/USList.yaml
+    filter: 美|US|(?i)States|American
+    type: file
+    path: ./Proxy/List.yaml
     health-check:
       enable: true
       interval: 600
       url: http://www.gstatic.com/generate_204
+
 proxy-groups:
-  - name: 𝐏𝐑𝐎𝐗𝐘
-    type: select
-    proxies:
-      - 🇭🇰 香港
-      - 🇹🇼 台湾
-      - 🇯🇵 日本
-      - 🇺🇸 美国
-      - 🇸🇬 新加坡
   - name: 𝐒𝐩𝐨𝐭𝐢𝐟𝐲
     type: select
     proxies:
       - 🇺🇸 美国
+
   - name: 𝐆𝐨𝐨𝐠𝐥𝐞
     type: select
     proxies:
+      - 🇭🇰 香港
       - 🇺🇸 美国
+
   - name: 𝐘𝐨𝐮𝐓𝐮𝐛𝐞
     type: select
     proxies:
+      - 🇭🇰 香港
       - 🇺🇸 美国
+
   - name: 𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦
     type: select
     proxies:
@@ -108,6 +126,7 @@ proxy-groups:
       - 🇯🇵 日本
       - 🇺🇸 美国
       - 🇸🇬 新加坡
+
   - name: 全球加速
     type: select
     proxies:
@@ -116,138 +135,147 @@ proxy-groups:
       - 🇯🇵 日本
       - 🇺🇸 美国
       - 🇸🇬 新加坡
+
   - name: 黑白名单
     type: select
     proxies:
       - 全球加速
       - 国内直连
+
   - name: 国内直连
     type: select
     proxies:
       - DIRECT
+
   - name: 🇭🇰 香港
     type: url-test
     use:
       - HK
     url: http://www.gstatic.com/generate_204
     interval: 300
+
   - name: 🇹🇼 台湾
     type: url-test
     use:
       - TW
     url: http://www.gstatic.com/generate_204
     interval: 300
+
   - name: 🇸🇬 新加坡
     type: url-test
     use:
       - SG
     url: http://www.gstatic.com/generate_204
     interval: 300
+
   - name: 🇯🇵 日本
     type: url-test
     use:
       - JP
     url: http://www.gstatic.com/generate_204
     interval: 300
+
   - name: 🇺🇸 美国
     type: url-test
     use:
       - US
     url: http://www.gstatic.com/generate_204
     interval: 300
+
 rule-providers:
+
   YouTube:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/YouTube.yaml
-    path: ./ruleset/YouTube.yaml
+    path: ./RuleSet/Google1/YouTube.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/YouTube/YouTube.yaml
     interval: 86400
+
   Google:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Google.yaml
-    path: ./ruleset/Google.yaml
+    path: ./RuleSet/Google1/Google.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Google/Google.yaml
     interval: 86400
+
   Apple:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Apple.yaml
-    path: ./ruleset/Apple.yaml
+    path: ./RuleSet/Google1/Apple.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Apple/Apple.yaml
     interval: 86400
+
   Spotify:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Spotify.yaml
-    path: ./ruleset/Spotify.yaml
+    path: ./RuleSet/Google1/Spotify.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Spotify/Spotify.yaml
     interval: 86400
+
   China:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/China.yaml
-    path: ./ruleset/China.yaml
+    path: ./RuleSet/Google1/China.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/China/China.yaml
     interval: 86400
+
   GitHub:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/GitHub.yaml
-    path: ./ruleset/GitHub.yaml
+    path: ./RuleSet/Google1/GitHub.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/GitHub/GitHub.yaml
     interval: 86400
+
   Global:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Global.yaml
-    path: ./ruleset/Global.yaml
+    path: ./RuleSet/Google1/Global.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@master/rule/Clash/Global/Global.yaml
     interval: 86400
+
   Microsoft:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Microsoft.yaml
-    path: ./ruleset/Microsoft.yaml
+    path: ./RuleSet/Google1/Microsoft.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@release/rule/Clash/Microsoft/Microsoft.yaml
     interval: 86400
-  Netflix:
-    type: http
-    behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Netflix.yaml
-    path: ./ruleset/Netflix.yaml
-    interval: 86400
+
   Advertising:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Advertising.yaml
-    path: ./ruleset/Advertising.yaml
+    path: ./RuleSet/Google1/Advertising.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@release/rule/Clash/Advertising/Advertising.yaml
     interval: 86400
+
   Twitter:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Twitter.yaml
-    path: ./ruleset/Twitter.yaml
+    path: ./RuleSet/Google1/Twitter.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@release/rule/Clash/Twitter/Twitter.yaml
     interval: 86400
+
   Telegram:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Telegram.yaml
-    path: ./ruleset/Telegram.yaml
+    path: ./RuleSet/Google1/Telegram.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@release/rule/Clash/Telegram/Telegram.yaml
     interval: 86400
+
   ChinaIP:
     type: http
-    behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/ChinaIP.yaml
-    path: ./ruleset/ChinaIP.yaml
+    behavior: ipcidr
+    path: ./RuleSet/Google1/ChinaIPs_IP.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@release/rule/Clash/ChinaIPs/ChinaIPs_IP.yaml
     interval: 86400
+
   Steam:
     type: http
     behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/Steam.yaml
-    path: ./ruleset/Steam.yaml
+    path: ./RuleSet/Google1/Steam.yaml
+    url: https://cdn.jsdelivr.net/gh/blackmatrix7/ios_rule_script@release/rule/Clash/Steam/Steam.yaml
     interval: 86400
-  TikTok:
-    type: http
-    behavior: classical
-    url: https://cdn.jsdelivr.net/gh/loonvip/2028@main/Clash/TikTok.yaml
-    path: ./ruleset/TikTok.yaml
-    interval: 86400
+
 rules:
-  - RULE-SET,TikTok,全球加速
   - RULE-SET,ChinaIP,DIRECT
   - RULE-SET,Steam,全球加速
   - RULE-SET,Telegram,𝐓𝐞𝐥𝐞𝐠𝐫𝐚𝐦
@@ -259,7 +287,6 @@ rules:
   - RULE-SET,GitHub,全球加速
   - RULE-SET,Global,全球加速
   - RULE-SET,Microsoft,DIRECT
-  - RULE-SET,Netflix,全球加速
   - RULE-SET,Advertising,REJECT
   - RULE-SET,Twitter,全球加速
   - IP-CIDR,192.168.0.0/16,DIRECT
@@ -271,6 +298,5 @@ rules:
   - IP-CIDR,fe80::/10,DIRECT
   - IP-CIDR,119.28.28.28/32,DIRECT
   - IP-CIDR,182.254.116.0/24,DIRECT
-  - IP-CIDR,125.91.16.220/32,DIRECT
   - GEOIP,CN,DIRECT
   - MATCH,黑白名单
