--- a/Surfboard/surfboard.conf
+++ b/Surfboard/surfboard.conf
@@ -38,7 +38,7 @@ hide-udp = 0
 𝐒𝐩𝐞𝐞𝐝𝐭𝐞𝐬𝐭 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
 𝐘𝐨𝐮𝐓𝐮𝐛𝐞 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
 𝐒𝐩𝐨𝐭𝐢𝐟𝐲 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
-𝐓𝐢𝐤𝐓𝐨𝐤 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
+𝐓𝐢𝐤𝐓𝐨𝐤 = select, 𝐏𝐫𝐨𝐱𝐲, 🇰🇷 韩国节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
 𝐓𝐰𝐢𝐭𝐭𝐞𝐫 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
 𝐆𝐢𝐭𝐇𝐮𝐛 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
 𝐀𝐩𝐩𝐥𝐞 = select, 𝐏𝐫𝐨𝐱𝐲, DIRECT, no-alert=0, hidden=0
