--- a/Surfboard/surfboard.conf
+++ b/Surfboard/surfboard.conf
@@ -30,7 +30,7 @@ hide-udp = 0
 
 [Proxy Group]
 
-𝐏𝐫𝐨𝐱𝐲 = select, DIRECT, policy-path=订阅
+#𝐏𝐫𝐨𝐱𝐲 = select, DIRECT, policy-path=订阅
 
 #分流分组
 𝐆𝐨𝐨𝐠𝐥𝐞 = select, 𝐏𝐫𝐨𝐱𝐲, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
@@ -48,7 +48,7 @@ hide-udp = 0
 𝐎𝐩𝐞𝐧𝐀𝐢 = select, 𝐏𝐫𝐨𝐱𝐲, 🇺🇸 美国节点, no-alert=0, hidden=0
 兜底分流 = select, 𝐏𝐫𝐨𝐱𝐲, DIRECT, 🇭🇰 香港节点, 🇺🇸 美国节点, 🇸🇬 新加坡节点, 🇯🇵 日本节点, 🇨🇳 台湾节点, no-alert=0, hidden=0
 
-# 自动测速
+#自动测速
 
 🇭🇰 香港节点 = url-test, policy-regex-filter=港|HK|(?i)Hong, interval=600, update-interval=86400, no-alert=0, hidden=0, include-other-group = "𝐏𝐫𝐨𝐱𝐲"
 🇯🇵 日本节点 = url-test, policy-regex-filter=日|东京|JP|(?i)Japan, interval=600, update-interval=86400, no-alert=0, hidden=0, include-other-group = "𝐏𝐫𝐨𝐱𝐲"
@@ -60,7 +60,7 @@ hide-udp = 0
 
 [Rule]
 
-# 分流规则
+#分流规则
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/ChinaIPs/ChinaIPs.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/China/China_All.list,DIRECT
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AdvertisingLite/AdvertisingLite.list,REJECT
